// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should not render box shadow 1`] = `
<Tooltip
  arrowDirection="bottom"
  backgroundColor="#FFFFFF"
  borderRadius="0px"
  fontColor="#3A494D"
  hasShadow={false}
  mode="light"
>
  <styled.div
    arrowDirection="bottom"
    backgroundColor="#FFFFFF"
    borderRadius="0px"
    fontColor="#3A494D"
    hasShadow={false}
    mode="light"
  >
    <StyledComponent
      arrowDirection="bottom"
      backgroundColor="#FFFFFF"
      borderRadius="0px"
      fontColor="#3A494D"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "dUAQES",
            "rules": Array [
              "
  padding: 10px 15px;
  background-color: ",
              [Function],
              ";
  border-radius: ",
              [Function],
              ";
  font-family: ",
              [Function],
              ";
  font-size: ",
              [Function],
              ";
  color: ",
              [Function],
              ";
  box-shadow: ",
              [Function],
              ";
  position: relative;
  ",
              [Function],
              "
  &::after {
    content: '';
    position: absolute;
    width: 0;
    height: 0;
    box-sizing: border-box;
    border: 4px solid ",
              [Function],
              ";
    transform-origin: 0 0;
    box-shadow: ",
              [Function],
              ";
    ",
              [Function],
              "
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      hasShadow={false}
      mode="light"
    >
      <div
        className="sc-bdVaJa dUAQES"
        mode="light"
      >
        tooltip
      </div>
    </StyledComponent>
  </styled.div>
</Tooltip>
`;

exports[`<Tooltip /> should render \`dark-mode\` 1`] = `
<Tooltip
  arrowDirection="bottom"
  backgroundColor="#FFFFFF"
  borderRadius="0px"
  fontColor="#3A494D"
  hasShadow={true}
  mode="dark"
>
  <styled.div
    arrowDirection="bottom"
    backgroundColor="#FFFFFF"
    borderRadius="0px"
    fontColor="#3A494D"
    hasShadow={true}
    mode="dark"
  >
    <StyledComponent
      arrowDirection="bottom"
      backgroundColor="#FFFFFF"
      borderRadius="0px"
      fontColor="#3A494D"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "jJImog",
            "rules": Array [
              "
  padding: 10px 15px;
  background-color: ",
              [Function],
              ";
  border-radius: ",
              [Function],
              ";
  font-family: ",
              [Function],
              ";
  font-size: ",
              [Function],
              ";
  color: ",
              [Function],
              ";
  box-shadow: ",
              [Function],
              ";
  position: relative;
  ",
              [Function],
              "
  &::after {
    content: '';
    position: absolute;
    width: 0;
    height: 0;
    box-sizing: border-box;
    border: 4px solid ",
              [Function],
              ";
    transform-origin: 0 0;
    box-shadow: ",
              [Function],
              ";
    ",
              [Function],
              "
  }
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      hasShadow={true}
      mode="dark"
    >
      <div
        className="sc-bdVaJa jJImog"
        mode="dark"
      >
        tooltip
      </div>
    </StyledComponent>
  </styled.div>
</Tooltip>
`;
